# escrowagent

./: .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_BASE.md  README.md  SECURITY.md  article.md  package-lock.json  package.json  tsconfig.json
.github/: README.md
.github/workflows/: ci.yml
contracts/: .env.example  foundry.toml
contracts/cache/: solidity-files-cache.json  test-failures
contracts/script/: Deploy.s.sol  DeployMockUSDC.s.sol  DeployUpgradeable.s.sol
contracts/src/: EscrowAgent.sol  EscrowAgentUUPS.sol  IEscrowAgent.sol
contracts/test/: EscrowAgent.t.sol  EscrowAgentUUPS.t.sol
dashboard/: .env.example  package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: EscrowTable.tsx  MobileNav.tsx  (+1 more)
docs/: CONTRACTS.md  DASHBOARD.md  INDEXER.md  PROGRAMS.md  PROJECT_OVERVIEW.md  README.md  SCRIPTS.md  SDK.md  TESTS.md
indexer/: .env.example  escrowagent-idl.json  package-lock.json  package.json  tsconfig.json
indexer/src/: api.ts  db.ts  index.ts  listener-base.ts  listener-solana.ts  listener.ts  seed.ts
programs/agentvault/: Cargo.toml
programs/agentvault/src/: errors.rs  events.rs  lib.rs
programs/agentvault/src/instructions/: accept.rs  cancel.rs  confirm.rs  create.rs  dispute.rs  expire.rs  initialize_config.rs  mod.rs  provider_release.rs  submit_proof.rs  update_config.rs
programs/agentvault/src/state/: config.rs  enums.rs  escrow.rs
programs/escrowagent/: Cargo.toml
scripts/: deploy.sh  initialize_protocol.ts  test_devnet.ts
sdk/agent-tools/: README.md  package-lock.json  package.json  tsconfig.json
sdk/cli/: README.md  package-lock.json  package.json
sdk/python/: pyproject.toml
sdk/python/agentvault/: __init__.py  client.py  types.py
sdk/python/escrowagent/: __init__.py  base.py  client.py  solana.py  types.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
skills/escrow-agent/: SKILL.md
tests/: agentvault.ts  escrowagent.ts
(+46 files in other folders)
