[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "escrowagent-sdk"
version = "0.1.0"
description = "Python SDK for EscrowAgent — escrow & SLA layer for agent-to-agent transactions on Solana"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["solana", "escrow", "agents", "sla", "web3"]
dependencies = [
    "solders>=0.21.0",
    "solana>=0.34.0",
    "anchorpy>=0.20.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]
